Benerin Create Post

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Link to the file hosted on your server, -->
   <link rel="stylesheet" href="dist\css\splide.min.css">
   <script src="dist\js\splide.min.js"></script>
-  <title>Vite + React</title>
+  <title>Tukang Article</title>
 </head>
 
 <body>
